[package]
name = "many_pendula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bytemuck = { version = "1.13.0", features = [ "derive" ] }
futures-intrusive = "0.5.0"
pollster = "0.2.5"
rand = "0.8.5"
wgpu = "0.15.0"
